--- a/.travis.yml
+++ b/.travis.yml
@@ -6,29 +6,65 @@ branches:
 matrix:
   include:
     - os: linux
+      arch: amd64
       dist: trusty
       language: python
       python: "2.6"
     - os: linux
+      arch: arm64
+      dist: trusty
+      language: python
+      python: "2.6"      
+    - os: linux
+      arch: amd64
       dist: bionic
       language: python
       python: "2.7"
     - os: linux
+      arch: arm64
+      dist: bionic
+      language: python
+      python: "2.7"      
+    - os: linux
+      arch: amd64
       dist: trusty
       language: python
       python: "3.2"
     - os: linux
+      arch: arm64
+      dist: trusty
+      language: python
+      python: "3.2"      
+    - os: linux
+      arch: amd64
       dist: trusty
       language: python
       python: "3.3"
     - os: linux
+      arch: arm64
+      dist: trusty
+      language: python
+      python: "3.3"      
+    - os: linux
+      arch: amd64
       dist: bionic
       language: python
       python: "3.7"
     - os: linux
+      arch: arm64
+      dist: bionic
+      language: python
+      python: "3.7"      
+    - os: linux
+      arch: amd64
       dist: xenial
       language: python
       python: "pypy"
+    - os: linux
+      arch: arm64
+      dist: xenial
+      language: python
+      python: "pypy"      
 script:
   - python run.py deps
   - python run.py ci
